--- a/about.html
+++ b/about.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="mai.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="Nav-container">
+      <div>Logo</div>
+      <div class="Navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact us.html">Contact Us</a>
+        <a href="services.html">Support</a>
+        <a href="testimony.html">Testimony</a>
+      </div>
+    </nav>
+    <p>
+      about.html Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Consectetur, ea optio unde provident iste officiis? Explicabo porro atque
+      aut amet.
+    </p>
+  </body>
 </html>
