--- a/contact us.html
+++ b/contact us.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="contact us .css" />
+    <link rel="stylesheet" href="mai.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="Nav-container">
+      <div>Logo</div>
+      <div class="Navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact us.html">Contact Us</a>
+        <a href="services.html">Support</a>
+        <a href="testimony.html">Testimony</a>
+      </div>
+    </nav>
+    <p>
+      contact.us Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
+      enim quos quidem error animi deserunt, accusamus illo ipsa a explicabo,
+      quod architecto dolor sint quam expedita!
+    </p>
+  </body>
 </html>
