--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <p>hello world</p>
+    <nav class="Nav-container">
+      <div>Logo</div>
+      <div class="Navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact us.html">Contact Us</a>
+        <a href="services.html">Support</a>
+        <a href="testimony.html">Testimony</a>
+      </div>
+    </nav>
+    <p>
+      Index.html Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+      minima inventore fugit voluptates facere ab neque, a est quis tempora.
+    </p>
   </body>
 </html>
