--- a/services.html
+++ b/services.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="services.css" />
+    <link rel="stylesheet" href="mai.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="Nav-container">
+      <div class="Navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact us.html">Contact Us</a>
+        <a href="services.html">Support</a>
+        <a href="testimony.html">Testimony</a>
+      </div>
+    </nav>
+    <p>
+      Services.html Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+      temporibus sapiente similique, exercitationem laboriosam aperiam ipsam
+      nulla debitis quisquam assumenda doloribus iste molestiae tempore
+      praesentium!
+    </p>
+  </body>
 </html>
