started the hero sessionr

--- a/index.html
+++ b/index.html
@@ -21,5 +21,66 @@
       Index.html Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
       minima inventore fugit voluptates facere ab neque, a est quis tempora.
     </p>
+    <div class="holder">
+      <img src="shoe1.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="hold">
+      <img src="shoe2.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="captain">
+      <img src="shoe3.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="con">
+      <img src="shoe4.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="Holdr">
+      <img src="shoe5.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="holde">
+      <img src="shoe6.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="older">
+      <img src="shoe7.jpg" alt="shoe" />
+
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="olde">
+      <img src="shoe8.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="lder">
+      <img src="shoe9.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
+    <div class="der">
+      <img src="shoe10.jpg" alt="shoe" />
+      <p>name</p>
+      <p>Price</p>
+      <button>Buy Now!</button>
+    </div>
   </body>
 </html>
