--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <nav class="Nav-container">
+      <div>Logo</div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
