fixed about page

--- a/index.html
+++ b/index.html
@@ -82,5 +82,25 @@
       <p>Price</p>
       <button>Buy Now!</button>
     </div>
+    <div class="holder1">
+      <div class="holder">
+        <img src="shoe1.jpg" alt="shoe" />
+        <p>name</p>
+        <p>Price</p>
+        <button>Buy Now!</button>
+      </div>
+      <div class="hold">
+        <img src="shoe2.jpg" alt="shoe" />
+        <p>name</p>
+        <p>Price</p>
+        <button>Buy Now!</button>
+      </div>
+      <div class="captain">
+        <img src="shoe3.jpg" alt="shoe" />
+        <p>name</p>
+        <p>Price</p>
+        <button>Buy Now!</button>
+      </div>
+    </div>
   </body>
 </html>
