--- a/about.html
+++ b/about.html
@@ -18,10 +18,46 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <p>
-      about.html Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Consectetur, ea optio unde provident iste officiis? Explicabo porro atque
-      aut amet.
-    </p>
+    <section class="product-grid">
+      <div class="product-card">
+        <img src="shoe10.jpg" alt="Shoe 1" />
+        <h1>him4s</h1>
+        <p class="price">£19.99</p>
+        <button>Buy now</button>
+        jordan4
+      </div>
+      <div class="product-card">
+        <img src="shoe1.jpg" alt="" />
+        <h1>Yunges</h1>
+        <p class="price">£24.99</p>
+        <button>Buy now</button>
+      </div>
+      <div class="product-card">
+        <img src="shoe2.jpg" alt="" />
+        <p class="price">£26.99</p>
+        <h1>Jordan2</h1>
+        <button>Buy now</button>
+        projumpers
+      </div>
+      <div class="product-card">
+        <img src="shoe3.jpg" alt="" />
+        <h1>Jordan4s</h1>
+        <p class="price">£28.99</p>
+        <button>Buy now</button>
+        yungs
+      </div>
+      <div class="product-card">
+        <img src="shoe4.jpg" alt="" />
+        <h1>Jordan1s</h1>
+        <p class="price">£36.99</p>
+        <button>Buy now</button>
+      </div>
+      <div class="product-card">
+        <img src="shoe6.jpg" alt="" />
+        <h1>projumpers</h1>
+        <p class="price">£46.99</p>
+        <button>Buy now</button>
+      </div>
+    </section>
   </body>
 </html>
