fixed about page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <nav class="Nav-container">
-      <div>Logo</div>
+      <div class="Imageh">
+        <img src="adidas-logo.173bd44f.png" alt="" />
+      </div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -102,5 +104,16 @@
         <button>Buy Now!</button>
       </div>
     </div>
+    <footer class="con">
+      <span class="con2">
+        addidas store cont@ct-darasimiogunjobi644@gmail.com
+        <div class="p11">
+          <p class="p1">Home</p>
+          <p class="p2">About</p>
+          <p class="p3">Contact</p>
+          <p class="p4">services</p>
+        </div>
+      </span>
+    </footer>
   </body>
 </html>
