--- a/testimony.html
+++ b/testimony.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="Nav-container">
-      <div>Logo</div>
+      <div class="Imageh"><img src="adidas-logo.173bd44f.png" alt="" /></div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -23,5 +23,8 @@
       Nemo est minima quas modi fuga ipsum expedita magnam exercitationem maxime
       facere.
     </p>
+    <footer>
+      <span> addidas store cont@ct-darasimiogunjobi644@gmail.com </span>
+    </footer>
   </body>
 </html>
