--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="Nav-container">
-      <div>Logo</div>
+      <div class="Imageh"><img src="adidas-logo.173bd44f.png" alt="" /></div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -59,5 +59,8 @@
         <button>Buy now</button>
       </div>
     </section>
+    <footer>
+      <span> addidas store cont@ct-darasimiogunjobi644@gmail.com </span>
+    </footer>
   </body>
 </html>
