--- a/contact us.html
+++ b/contact us.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="Nav-container">
-      <div>Logo</div>
+      <div class="Imageh"><img src="adidas-logo.173bd44f.png" alt="" /></div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -23,5 +23,10 @@
       enim quos quidem error animi deserunt, accusamus illo ipsa a explicabo,
       quod architecto dolor sint quam expedita!
     </p>
+    <footer class="con">
+      <span class="con2">
+        addidas store cont@ct-darasimiogunjobi644@gmail.com
+      </span>
+    </footer>
   </body>
 </html>
