--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="Nav-container">
-      <div>Logo</div>
+      <div class="Imageh"><img src="adidas-logo.173bd44f.png" alt="" /></div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -24,5 +24,8 @@
       nulla debitis quisquam assumenda doloribus iste molestiae tempore
       praesentium!
     </p>
+    <footer>
+      <span> addidas store cont@ct-darasimiogunjobi644@gmail.com </span>
+    </footer>
   </body>
 </html>
