--- a/index.html
+++ b/index.html
@@ -19,101 +19,68 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <p>
-      Index.html Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-      minima inventore fugit voluptates facere ab neque, a est quis tempora.
-    </p>
-    <div class="holder">
-      <img src="shoe1.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="hold">
-      <img src="shoe2.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="captain">
-      <img src="shoe3.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="con">
-      <img src="shoe4.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="Holdr">
-      <img src="shoe5.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="holde">
-      <img src="shoe6.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="older">
-      <img src="shoe7.jpg" alt="shoe" />
-
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="olde">
-      <img src="shoe8.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="lder">
-      <img src="shoe9.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="der">
-      <img src="shoe10.jpg" alt="shoe" />
-      <p>name</p>
-      <p>Price</p>
-      <button>Buy Now!</button>
-    </div>
-    <div class="holder1">
-      <div class="holder">
-        <img src="shoe1.jpg" alt="shoe" />
-        <p>name</p>
-        <p>Price</p>
-        <button>Buy Now!</button>
+    <section class="sec">
+      <p class="sec1">
+        Welcome the one of the best stores in England i hope you enjoy your time
+      </p>
+      <button class="explore-button">Explore More...</button>
+    </section>
+    <section class="product-grid">
+      <div class="product-card">
+        <img src="shoe10.jpg" alt="Shoe 1" />
+        <h1>him4s</h1>
+        <p class="price">£19.99</p>
+        <button>Buy now</button>
+        jordan4
       </div>
-      <div class="hold">
-        <img src="shoe2.jpg" alt="shoe" />
-        <p>name</p>
-        <p>Price</p>
-        <button>Buy Now!</button>
+      <div class="product-card">
+        <img src="shoe1.jpg" alt="" />
+        <h1>Yunges</h1>
+        <p class="price">£24.99</p>
+        <button>Buy now</button>
       </div>
-      <div class="captain">
-        <img src="shoe3.jpg" alt="shoe" />
-        <p>name</p>
-        <p>Price</p>
-        <button>Buy Now!</button>
+      <div class="product-card">
+        <img src="shoe2.jpg" alt="" />
+        <p class="price">£26.99</p>
+        <h1>Jordan2</h1>
+        <button>Buy now</button>
+        projumpers
       </div>
-    </div>
-    <footer class="con">
-      <span class="con2">
-        addidas store cont@ct-darasimiogunjobi644@gmail.com
-        <div class="p11">
-          <p class="p1">Home</p>
-          <p class="p2">About</p>
-          <p class="p3">Contact</p>
-          <p class="p4">services</p>
+      <div class="product-card">
+        <img src="shoe3.jpg" alt="" />
+        <h1>Jordan4s</h1>
+        <p class="price">£28.99</p>
+        <button>Buy now</button>
+        yungs
+      </div>
+      <div class="product-card">
+        <img src="shoe4.jpg" alt="" />
+        <h1>Jordan1s</h1>
+        <p class="price">£36.99</p>
+        <button>Buy now</button>
+      </div>
+      <div class="product-card">
+        <img src="shoe6.jpg" alt="" />
+        <h1>projumpers</h1>
+        <p class="price">£46.99</p>
+        <button>Buy now</button>
+      </div>
+    </section>
+   <footer class="footer">
+        <div class="footer1">
+          <h2 class="footer1-text">
+            BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+            <button class="footer1-btn">SIGN UP FOR FREE</button>
+          </h2>
         </div>
-      </span>
-    </footer>
+        <div class="footer2">
+          <span>Cookie settings</span>
+          <span>Data settings</span>
+          <span>Cookies</span>
+          <span>Privacy Notice</span>
+          <span>Terms and Condition</span>
+        </div>
+
+
   </body>
 </html>
