--- a/about.html
+++ b/about.html
@@ -18,49 +18,29 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <section class="product-grid">
-      <div class="product-card">
-        <img src="shoe10.jpg" alt="Shoe 1" />
-        <h1>him4s</h1>
-        <p class="price">£19.99</p>
-        <button>Buy now</button>
-        jordan4
-      </div>
-      <div class="product-card">
-        <img src="shoe1.jpg" alt="" />
-        <h1>Yunges</h1>
-        <p class="price">£24.99</p>
-        <button>Buy now</button>
-      </div>
-      <div class="product-card">
-        <img src="shoe2.jpg" alt="" />
-        <p class="price">£26.99</p>
-        <h1>Jordan2</h1>
-        <button>Buy now</button>
-        projumpers
-      </div>
-      <div class="product-card">
-        <img src="shoe3.jpg" alt="" />
-        <h1>Jordan4s</h1>
-        <p class="price">£28.99</p>
-        <button>Buy now</button>
-        yungs
-      </div>
-      <div class="product-card">
-        <img src="shoe4.jpg" alt="" />
-        <h1>Jordan1s</h1>
-        <p class="price">£36.99</p>
-        <button>Buy now</button>
-      </div>
-      <div class="product-card">
-        <img src="shoe6.jpg" alt="" />
-        <h1>projumpers</h1>
-        <p class="price">£46.99</p>
-        <button>Buy now</button>
-      </div>
+    <section>
+      <img src="shoe2.jpg" alt="image1" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+        doloremque maiores, iste, perferendis, est tenetur ex quaerat aperiam
+        cupiditate quisquam voluptatibus. Fugit libero eaque hic culpa!
+      </p>
     </section>
-    <footer>
-      <span> addidas store cont@ct-darasimiogunjobi644@gmail.com </span>
+
+    <footer class="footer">
+      <div class="footer1">
+        <h2 class="footer1-text">
+          BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+          <button class="footer1-btn">SIGN UP FOR FREE</button>
+        </h2>
+      </div>
+      <div class="footer2">
+        <span>Cookie settings</span>
+        <span>Data settings</span>
+        <span>Cookies</span>
+        <span>Privacy Notice</span>
+        <span>Terms and Condition</span>
+      </div>
     </footer>
   </body>
 </html>
