--- a/services.html
+++ b/services.html
@@ -24,8 +24,20 @@
       nulla debitis quisquam assumenda doloribus iste molestiae tempore
       praesentium!
     </p>
-    <footer>
-      <span> addidas store cont@ct-darasimiogunjobi644@gmail.com </span>
-    </footer>
+    
+    <footer class="footer">
+        <div class="footer1">
+          <h2 class="footer1-text">
+            BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+            <button class="footer1-btn">SIGN UP FOR FREE</button>
+          </h2>
+        </div>
+        <div class="footer2">
+          <span>Cookie settings</span>
+          <span>Data settings</span>
+          <span>Cookies</span>
+          <span>Privacy Notice</span>
+          <span>Terms and Condition</span>
+        </div>
   </body>
 </html>
