--- a/about.html
+++ b/about.html
@@ -21,9 +21,7 @@
     <section>
       <img src="shoe2.jpg" alt="image1" />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-        doloremque maiores, iste, perferendis, est tenetur ex quaerat aperiam
-        cupiditate quisquam voluptatibus. Fugit libero eaque hic culpa!
+       hello I am feranmi
       </p>
     </section>
 
