designed about page

--- a/contact us.html
+++ b/contact us.html
@@ -18,24 +18,34 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <p>
-      contact.us Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-      enim quos quidem error animi deserunt, accusamus illo ipsa a explicabo,
-      quod architecto dolor sint quam expedita!
-    </p>
+
+    <section class="contact-page">
+      <h1>We'd love to hear from you!</h1>
+
+      <h2>The Mozplex</h2>
+
+      <h4>Down town seattle</h4>
+
+      <h4>1113rd Avenue</h4>
+
+      <h4>17th floor</h4>
+
+      <h4>Seattle 23.453 WA</h4>
+    </section>
     <footer class="footer">
-        <div class="footer1">
-          <h2 class="footer1-text">
-            BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
-            <button class="footer1-btn">SIGN UP FOR FREE</button>
-          </h2>
-        </div>
-        <div class="footer2">
-          <span>Cookie settings</span>
-          <span>Data settings</span>
-          <span>Cookies</span>
-          <span>Privacy Notice</span>
-          <span>Terms and Condition</span>
-        </div>
+      <div class="footer1">
+        <h2 class="footer1-text">
+          BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+          <button class="footer1-btn">SIGN UP FOR FREE</button>
+        </h2>
+      </div>
+      <div class="footer2">
+        <span>Cookie settings</span>
+        <span>Data settings</span>
+        <span>Cookies</span>
+        <span>Privacy Notice</span>
+        <span>Terms and Condition</span>
+      </div>
+    </footer>
   </body>
 </html>
