--- a/testimony.html
+++ b/testimony.html
@@ -23,20 +23,88 @@
       Nemo est minima quas modi fuga ipsum expedita magnam exercitationem maxime
       facere.
     </p>
-   <footer class="footer">
-        <div class="footer1">
-          <h2 class="footer1-text">
-            BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
-            <button class="footer1-btn">SIGN UP FOR FREE</button>
-          </h2>
-        </div>
-        <div class="footer2">
-          <span>Cookie settings</span>
-          <span>Data settings</span>
-          <span>Cookies</span>
-          <span>Privacy Notice</span>
-          <span>Terms and Condition</span>
-        </div>
-
+    <section>
+      <div>
+        <img src="images (1).jpg" alt="" />
+        <h1>Mason Greenwood</h1>
+        <h2>1st class service</h2>
+        <p>
+          Always receive 1st class service both instore and online. Really
+          beautiful and quality shoes in large sizes which are always difficult
+          to find. whenever I go into crispiness I always come out with at least
+          1 pair. (October 2017)
+        </p>
+      </div>
+      <br />
+      <div>
+        <img src="images (2).jpg" alt="" />
+        <h1>Jason mchall</h1>
+        <h2>My life would not be as good without Crispins!</h2>
+        <p>
+          My life would not be as good without Crispins! Fabulous footwear,
+          styles to suit not only every occasion you might experience, but
+          terrific quality too. The range of shoes and boots is wide. Modern,
+          trendy, comfort, funky, practical, sensational, stylish - you name it
+          Crispins of London have it! The staff are so helpful, always willing
+          to take a call and go to no end coffee trouble to add extra
+          descriptions, talk through options or discuss suitability. Great
+          service with fast postage if needed and easy to return, refund or
+          exchange. What is there to dislike!? (October 2017)
+        </p>
+      </div>
+      <br />
+      <div>
+        <img src="images (3).jpg" alt="" />
+        <h1>John Borrison</h1>
+        <h2>Thank goodness for Crispins</h2>
+        <p>
+          I am 20 years old with size 10 feet and I LOVE shoes. I luckily
+          discovered you whilst I was at Senior School as I found it extremely
+          difficult to buy shoes that were school appropriate. Out of school, I
+          was so jealous of my friends who wore trendy topshop heels or
+          fashion-forward boots, and when I found Crispins I felt fashionable
+          and fun too, so could join in with my friends no matter my shoe size.
+        </p>
+      </div>
+      <br />
+      <div>
+        <img src="images (4).jpg" alt="" />
+        <h1>Miles Parker</h1>
+        <h2>First class and deserve to prosper</h2>
+        <p>
+          Over the years superb shoes, boots to evening wear, professional care
+          and attention both in person and by mail order. First class and
+          deserve to prosper Thank you (October 2017)
+        </p>
+      </div>
+      <br />
+      <div>
+        <img src="images (5).jpg" alt="" />
+        <h1>Elon Musk</h1>
+        <h2>I am so thrilled to find Crispins</h2>
+        <p>
+          I am so thrilled to find Crispins. The shoes are up to date and
+          beautifully made. Crispins employees could not be more helpful. My
+          only complaint is that after years of trying to get one pair of
+          fashionable shoes to fit I am now spoilt for choice and buy more than
+          I sho
+        </p>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer1">
+        <h2 class="footer1-text">
+          BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+          <button class="footer1-btn">SIGN UP FOR FREE</button>
+        </h2>
+      </div>
+      <div class="footer2">
+        <span>Cookie settings</span>
+        <span>Data settings</span>
+        <span>Cookies</span>
+        <span>Privacy Notice</span>
+        <span>Terms and Condition</span>
+      </div>
+    </footer>
   </body>
 </html>
