designed about page

--- a/index.html
+++ b/index.html
@@ -28,40 +28,43 @@
     </section>
     <section class="product-grid">
       <div class="product-card">
-        <img src="adidas3.png" alt="Shoe 1" />
+        <img src="adidas1.png" alt="Shoe 1" />
         <h1>him4s</h1>
         <p class="price">£19.99</p>
         <button>Buy now</button>
       </div>
       <div class="product-card">
-        <img src="adidas1.png" alt="" />
+        <img src="adidas2.png" alt="" />
         <h1>Yunges</h1>
         <p class="price">£24.99</p>
         <button>Buy now</button>
       </div>
       <div class="product-card">
-        <img src="adidas10.png" alt="" />
+        <img src="adidas3.png" alt="" />
         <h1>Jordan2</h1>
         <p class="price">£26.99</p>
         <button>Buy now</button>
       </div>
       <div class="product-card">
-        <img src="adidas5.png" alt="" />
+        <img src="adidas4.png" alt="" />
         <h1>Jordan4s</h1>
         <p class="price">£28.99</p>
         <button>Buy now</button>
       </div>
       <div class="product-card">
-        <img src="adidas2.png" alt="" />
+        <img src="adidas5.png" alt="" />
         <h1>Jordan1s</h1>
         <p class="price">£36.99</p>
         <button>Buy now</button>
       </div>
       <div class="product-card">
-        <img src="adidas8.png" alt="" />
+        <img src="adidas6.png" alt="" />
         <h1>projumpers</h1>
         <p class="price">£46.99</p>
         <button>Buy now</button>
+      </div>
+      <div class="product-card">
+        <img src="adidas7.png" alt="" />
       </div>
     </section>
     <footer class="footer">
