--- a/services.html
+++ b/services.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="services.css" />
     <link rel="stylesheet" href="mai.css" />
-    <title>Document</title>
+    <title>Our Services</title>
   </head>
   <body>
     <nav class="Nav-container">
-      <div class="Imageh"><img src="adidas-logo.173bd44f.png" alt="" /></div>
+      <div class="Imageh">
+        <img src="adidas-logo.173bd44f.png" alt="Logo" />
+      </div>
       <div class="Navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -18,26 +20,53 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <p>
-      Services.html Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-      temporibus sapiente similique, exercitationem laboriosam aperiam ipsam
-      nulla debitis quisquam assumenda doloribus iste molestiae tempore
-      praesentium!
-    </p>
-    
+
+    <header class="services-header">
+      <h1>Our Services</h1>
+      <p>
+        We provide high-quality products and customer service that meet your
+        needs. Whether you're shopping online or visiting us in-store, your
+        satisfaction is our top priority.
+      </p>
+    </header>
+
+    <section class="services-grid">
+      <div class="service-card">
+        <img src="shoe-fitting.jpg" alt="Fitting Service" />
+        <h2>Custom Shoe Fitting</h2>
+        <p>Get professionally measured and fitted for the perfect shoes.</p>
+      </div>
+      <div class="service-card">
+        <img src="fast-shipping.jpg" alt="Fast Shipping" />
+        <h2>Fast Delivery</h2>
+        <p>Enjoy fast and reliable delivery services worldwide.</p>
+      </div>
+      <div class="service-card">
+        <img src="support-team.jpg" alt="Customer Support" />
+        <h2>24/7 Support</h2>
+        <p>Our dedicated team is here to help you anytime, anywhere.</p>
+      </div>
+      <div class="service-card">
+        <img src="exchange.jpg" alt="Exchange & Return" />
+        <h2>Easy Returns</h2>
+        <p>Simple return and exchange process if you're not satisfied.</p>
+      </div>
+    </section>
+
     <footer class="footer">
-        <div class="footer1">
-          <h2 class="footer1-text">
-            BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
-            <button class="footer1-btn">SIGN UP FOR FREE</button>
-          </h2>
-        </div>
-        <div class="footer2">
-          <span>Cookie settings</span>
-          <span>Data settings</span>
-          <span>Cookies</span>
-          <span>Privacy Notice</span>
-          <span>Terms and Condition</span>
-        </div>
+      <div class="footer1">
+        <h2 class="footer1-text">
+          BECOME A MEMBER AND EARN 500 POINTS TO SPEND ON REWARDS
+          <button class="footer1-btn">SIGN UP FOR FREE</button>
+        </h2>
+      </div>
+      <div class="footer2">
+        <span>Cookie settings</span>
+        <span>Data settings</span>
+        <span>Cookies</span>
+        <span>Privacy Notice</span>
+        <span>Terms and Condition</span>
+      </div>
+    </footer>
   </body>
 </html>
