designed about page

--- a/index.html
+++ b/index.html
@@ -65,8 +65,36 @@
       </div>
       <div class="product-card">
         <img src="adidas7.png" alt="" />
+        <h1>msi 5s</h1>
+        <p class="price">£48.99</p>
+        <button>Buy Now</button>
+      </div>
+      <div class="product-card">
+        <img src="adidas8.png" alt="" />
+        <h1>Bluestacks 8s</h1>
+        <p class="price">£65.99</p>
+        <button>Buy now</button>
+      </div>
+      <div class="product-card">
+        <img src="adidas9.png" alt="" />
+        <h1>Panda dunks</h1>
+        <p class="price">£54.97</p>
+        <button>Buy Now</button>
+      </div>
+      <div class="product-card">
+        <img src="adidas10.png" alt="" />
+        <h1>Realism 8s</h1>
+        <p class="price">£76.99</p>
+        <button>Buy Now</button>
+      </div>
+      <div class="product-card">
+        <img src="adidas11.png" alt="" />
+        <h1>Torres 6s</h1>
+        <p class="price">£65.99</p>
+        <button>Buy Now</button>
       </div>
     </section>
+
     <footer class="footer">
       <div class="footer1">
         <h2 class="footer1-text">
