designed about page

--- a/services.html
+++ b/services.html
@@ -32,22 +32,22 @@
 
     <section class="services-grid">
       <div class="service-card">
-        <img src="shoe-fitting.jpg" alt="Fitting Service" />
+        <img src="adidas11.png" alt="Fitting Service" />
         <h2>Custom Shoe Fitting</h2>
         <p>Get professionally measured and fitted for the perfect shoes.</p>
       </div>
       <div class="service-card">
-        <img src="fast-shipping.jpg" alt="Fast Shipping" />
+        <img src="OIP (1).webp" alt="Fast Shipping" />
         <h2>Fast Delivery</h2>
         <p>Enjoy fast and reliable delivery services worldwide.</p>
       </div>
       <div class="service-card">
-        <img src="support-team.jpg" alt="Customer Support" />
+        <img src="OIP (2).webp" alt="Customer Support" />
         <h2>24/7 Support</h2>
         <p>Our dedicated team is here to help you anytime, anywhere.</p>
       </div>
       <div class="service-card">
-        <img src="exchange.jpg" alt="Exchange & Return" />
+        <img src="download.webp" alt="Exchange & Return" />
         <h2>Easy Returns</h2>
         <p>Simple return and exchange process if you're not satisfied.</p>
       </div>
