--- a/testimony.html
+++ b/testimony.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
     <p></p>
-    <section>
+    <section class="testimony-card">
       <div>
         <img src="images (1).jpg" alt="" />
         <h1>Mason Greenwood</h1>
@@ -31,7 +31,7 @@
           1 pair. (October 2017)
         </p>
       </div>
-      <br />
+
       <div>
         <img src="images (2).jpg" alt="" />
         <h1>Jason mchall</h1>
@@ -48,7 +48,7 @@
           exchange. What is there to dislike!? (October 2017)
         </p>
       </div>
-      <br />
+
       <div>
         <img src="images (3).jpg" alt="" />
         <h1>John Borrison</h1>
@@ -56,13 +56,10 @@
         <p>
           I am 20 years old with size 10 feet and I LOVE shoes. I luckily
           discovered you whilst I was at Senior School as I found it extremely
-          difficult to buy shoes that were school appropriate. Out of school, I
-          was so jealous of my friends who wore trendy topshop heels or
-          fashion-forward boots, and when I found Crispins I felt fashionable
-          and fun too, so could join in with my friends no matter my shoe size.
+          difficult to buy shoes that were school appropriate.
         </p>
       </div>
-      <br />
+
       <div>
         <img src="images (4).jpg" alt="" />
         <h1>Miles Parker</h1>
@@ -73,7 +70,7 @@
           deserve to prosper Thank you (October 2017)
         </p>
       </div>
-      <br />
+
       <div>
         <img src="images (5).jpg" alt="" />
         <h1>Elon Musk</h1>
