--- a/about.html
+++ b/about.html
@@ -18,11 +18,39 @@
         <a href="testimony.html">Testimony</a>
       </div>
     </nav>
-    <section>
-      <img src="shoe2.jpg" alt="image1" />
-      <p>
-       hello I am feranmi
-      </p>
+
+    <header class="about-header">
+      <h1>About Crispins</h1>
+      <p>Delivering premium footwear experiences since day one.</p>
+    </header>
+
+    <section class="about-section">
+      <div class="about-text">
+        <h2>Our Story</h2>
+        <p>
+          ABCD was founded with a singular mission: to create stylish,
+          comfortable, and high-quality shoes for individuals with larger sizes,
+          without compromising on trend or elegance. Over the years, we've grown
+          into a trusted name, serving thousands of customers around the globe.
+        </p>
+      </div>
+      <div class="about-image">
+        <img src="" alt="Our Team" />
+      </div>
+    </section>
+
+    <section class="about-section reverse">
+      <div class="about-image">
+        <img src="" alt="Our Values" />
+      </div>
+      <div class="about-text">
+        <h2>Our Values</h2>
+        <p>
+          At ABCD, we prioritize customer satisfaction, ethical sourcing, and
+          continuous innovation. Whether in-store or online, our team goes above
+          and beyond to make shoe shopping enjoyable and stress-free.
+        </p>
+      </div>
     </section>
 
     <footer class="footer">
